src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap');

* {
  /* Defaults */
  font-family: 'Cairo', sans-serif;
  font-size: 18px;
  color: white;
  margin: 0;
}

:root {
  --accent-colour: #db4409;
  --dark: #191f27;
}

body {
  background-image: url('./assets/paul-pastourmatzis-KT3WlrL_bsg-unsplash.jpg');
  background-position: bottom center;
  background-repeat: no-repeat;
  background-size: cover;

  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
}

h1 {
  font-size: 2.5rem;
  font-weight: 900;
  color: white;
}

.container {
  height: 80vh;
  width: 80vw;
}

.forms-container {
  display: flex;
  gap: 2rem;
}

.hidden {
  display: none;
}

/* SEARCH FORM */
#location-form {
  display: flex;
  gap: 1rem;
  align-items: baseline;
}

input[type="text"] {
  background: none;
  border: none;
  border-bottom: 2px solid white;
}
  
::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: rgb(245, 245, 245);
}
  
button {
  background: none;
  border-style: none;
  border-radius: 5px;
}

#temperature-settings {
  display: flex;
  margin: 8px; 
  gap: 8px;
  align-items: center;
}

#search-error {
  font-style: italic;
  background-color: var(--accent-colour);
  border-radius: 5px;
  border: 2px solid white;

  padding: 0 .5rem;
  margin-bottom: 18px;

  width: fit-content;
  height: 1.8rem;
}

/* CURRENT WEATHER */
.current-weather {
    display: grid;
    grid-template-columns: 1fr 5fr;

    width: 240px;
    height: 40vh;

    background-color: rgba(0, 0, 0, .75);
    border-radius: 16px;

    color: white;
}

.current-weather h2 {
    grid-column: 1 / -1;

    margin: 0;

    text-align: center;
}

.hero {
    display: flex;
    justify-content: center;

    grid-column: 1 / -1;
    justify-self: center;

    background-color: rgba(0, 0, 0, .75);

    width: 100%;
}

.descr {
    grid-column: 1 / -1;
    justify-self: center;

    background-color: rgba(0, 0, 0, .75);

    width: 100%;

    text-align: center;
}

.icon {
    text-align: right;
}

/* FOR TOGGLE */
.switch {
    position: relative;
    display: inline-block;
    width: 44px;
    height: 26px;
  }
  
  /* Hide default HTML checkbox */
  .switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--accent-colour);
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 26px;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 18px;
    width: 18px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 50%;
  }
  
  input:checked + .slider {
    background-color: var(--accent-colour);
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px var(--accent-colour);
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(18px);
    -ms-transform: translateX(18px);
    transform: translateX(18px);
  }

  /* FONT AWESOME */
  @font-face {
    font-family: 'Font Awesome';
    src: url('./assets/ui-icons/font-awesome/fa-solid-900.woff2') format('woff2'), url('./assets/ui-icons/font-awesome/fa-solid-900.ttf') format('truetype');
    font-weight: 600;
    font-style: normal;
  }
  .fa {
    font-family: 'Font Awesome'; 
  }

  .fa-solid {
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    display: var(--fa-display, inline-block);
    font-style: normal;
    font-variant: normal;
    line-height: 1;
    text-rendering: auto; 
  }

  .fa-magnifying-glass::before {
    content: "\f002"; 
  }

/* WEATHER ICONS BY ERIK FLOWERS */
@font-face {
  font-family: 'weathericons';
  src: url('./assets/weather-icons/weathericons-regular-webfont.eot');
  src: url('./assets/weather-icons/weathericons-regular-webfont.eot?#iefix') format('embedded-opentype'), url('./assets/weather-icons/weathericons-regular-webfont.woff2') format('woff2'), url('./assets/weather-icons/weathericons-regular-webfont.woff') format('woff'), url('./assets/weather-icons/weathericons-regular-webfont.ttf') format('truetype'), url('./assets/weather-icons/weathericons-regular-webfont.svg#weather_iconsregular') format('svg');
  font-weight: normal;
  font-style: normal;
}
.wi {
  display: inline-block;
  font-family: 'weathericons';
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.wi-fw {
  text-align: center;
  width: 1.4em;
}
.wi-rotate-90 {
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}
.wi-rotate-180 {
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}
.wi-rotate-270 {
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
}
.wi-flip-horizontal {
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=0, mirror=1);
  -webkit-transform: scale(-1, 1);
  -ms-transform: scale(-1, 1);
  transform: scale(-1, 1);
}
.wi-flip-vertical {
  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1);
  -webkit-transform: scale(1, -1);
  -ms-transform: scale(1, -1);
  transform: scale(1, -1);
}
.wi-day-sunny:before {
  content: "\f00d";
}
.wi-day-cloudy:before {
  content: "\f002";
}
.wi-day-cloudy-gusts:before {
  content: "\f000";
}
.wi-day-cloudy-windy:before {
  content: "\f001";
}
.wi-day-fog:before {
  content: "\f003";
}
.wi-day-hail:before {
  content: "\f004";
}
.wi-day-haze:before {
  content: "\f0b6";
}
.wi-day-lightning:before {
  content: "\f005";
}
/* ... */

